# Tarea1_DTW_Markov-

./: Codigo_Latex  README.md  analisis.py  codigo.py  pyproject.toml
