[tool.poetry]
name = "repl_nix_Tarea1DTWMarkov-"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
tslearn = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
